# xiaomi-device-control

./: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
plugins/xiaomi-home/: .mcp.json
plugins/xiaomi-home/.claude-plugin/: plugin.json
skills/xiaomi-home/: SKILL.md
src/: auth_helper.py  camera.py  config.py  micloud.py  server.py  xiaomi_client.py
